--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">bUber</string>
     <string name="error_message">Failed to get results. Please, try again.</string>
+
+    <string name="navigation_drawer_open">Open drawer</string>
+    <string name="navigation_drawer_close">Close drawer</string>
+
+
+    <string name="action_settings">Settings</string>
+    <string name="orders">Orders</string>
+    <string name="payments">Payments</string>
+    <string name="other">Other</string>
+    <string name="about_us">About Us</string>
+    <string name="login">Login</string>
+    <string name="mobile_number">Mobile number</string>
 </resources>
